--- a/src/components/plans-card/PlansCard.module.css
+++ b/src/components/plans-card/PlansCard.module.css
@@ -1,5 +1,5 @@
 .card {
-  width: 200px;
   padding: 20px;
   background-color: var(--main-color);
+  flex-grow: 1;
 }
