--- a/src/components/plans/Plans.module.css
+++ b/src/components/plans/Plans.module.css
@@ -1,6 +1,7 @@
 .container {
   grid-area: "plans";
   display: flex;
+  align-items: flex-start;
   gap: 10px;
   padding: 10px;
   background-color: var(--extra-color);
